# carcassone

./: .gitignore  CLAUDE.md  start.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: error.rs  mod.rs  routes.rs  state.rs
backend/src/domain/: board.rs  feature.rs  game.rs  greedy.rs  mod.rs  oracle.rs  player.rs  random.rs  scoring.rs  snapshot.rs  tile.rs  tile_set.rs
frontend/: elm.json  package-lock.json  package.json
frontend/src/: Main.elm
frontend/static/: index.html  style.css
