[package]
name = "carcassonne-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
jsonwebtoken = "9"
argon2 = "0.5"
thiserror = "2"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
password-hash = "0.5"
futures = "0.3"
tokio-stream = "0.1"
tower = "0.5"
rayon = "1.10"

# Optional ML stack (feature-gated for research binaries)
tch = { version = "0.17", optional = true }
safetensors = { version = "0.4", optional = true }

[features]
default = []
neural = ["tch", "safetensors"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
